BLE devices list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="device_name">Device name</string>
     <string name="bluetooth_available">Bluetooth available</string>
     <string name="bluetooth_turned_on">Bluetooth turned on?</string>
+    <string name="visible_ble_devices">Visible BLE devices:</string>
 </resources>
