--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">BLERC</string>
     <string name="button_keyboard">Keyboard</string>
     <string name="button_bluetooth">Bluetooth status</string>
     <string name="touchpad">Touchpad</string>
@@ -7,5 +7,5 @@
     <string name="device_name">Device name</string>
     <string name="bluetooth_available">Bluetooth available</string>
     <string name="bluetooth_turned_on">Bluetooth turned on?</string>
-    <string name="visible_ble_devices">Visible BLE devices:</string>
+    <string name="visible_ble_devices">Nearby BLE devices:</string>
 </resources>
