--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">El Potato</string>
     <string name="connection_status">Connection status</string>
     <string name="button_keyboard">Keyboard</string>
+    <string name="button_mouse">Mouse</string>
     <string name="bluetooth_settings">Bluetooth settings</string>
     <string name="touchpad">Touchpad</string>
     <string name="device_name">Device name</string>
@@ -21,4 +22,6 @@
     <string name="advertising_error">Advertising error</string>
     <string name="connection_error">Connection error</string>
     <string name="connection_error_details">Connection error: %1$s</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
