--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -23,4 +23,6 @@
     <string name="advertising_error">Błąd rozgłaszania</string>
     <string name="connection_error">Błąd połączenia</string>
     <string name="connection_error_details">Błąd połączenia: %1$s</string>
+    <string name="bluetooth_disabled_error">Aplikacja do prawidłowego działania potrzebuje włączonego adaptera bluetooth</string>
+    <string name="bluetooth_disabled">Adapter bluetooth jest wyłączony</string>
 </resources>
