--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,7 @@
     <string name="connection_error_details">Connection error: %1$s</string>
     <string name="bluetooth_disabled_error">Application needs bluetooth adapter turned on to work correctly</string>
     <string name="bluetooth_disabled">Bluetooth adapter is turned off</string>
+    <string name="connect">Connect</string>
+    <string name="disconnect">Disconnect</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
