Truncate BT device name to fit into 31 bytes of advertisement data

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -20,7 +20,7 @@
     <string name="advertise">Rozgłaszaj</string>
     <string name="advertising">Rozgłaszanie…</string>
     <string name="found_devices">Wykryte urządzenia:</string>
-    <string name="advertising_error">Błąd rozgłaszania</string>
+    <string name="advertising_error">Błąd rozgłaszania (%1$d)</string>
     <string name="connection_error">Błąd połączenia</string>
     <string name="connection_error_details">Błąd połączenia: %1$s</string>
     <string name="bluetooth_disabled_error">Aplikacja do prawidłowego działania potrzebuje włączonego adaptera bluetooth</string>
