- Make design work on narrow screens - Add mising content description for screen readers - Reconnect after 750ms instead of eternity like 2000ms

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -27,4 +27,5 @@
     <string name="bluetooth_disabled">Adapter bluetooth jest wyłączony</string>
     <string name="connect">Połącz</string>
     <string name="disconnect">Rozłącz</string>
+    <string name="paired_devices_list">Lista sparowanych urządzeń</string>
 </resources>
