--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="bluetooth_disabled">Bluetooth adapter is turned off</string>
     <string name="connect">Connect</string>
     <string name="disconnect">Disconnect</string>
+    <string name="paired_devices_list">List of paired devices</string>
 
 </resources>
