- Fix handling of runtime permissions - Handle long lists of devices by adding nested scroll view - Show error message if discovery start failed

--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -28,4 +28,6 @@
     <string name="connect">Połącz</string>
     <string name="disconnect">Rozłącz</string>
     <string name="paired_devices_list">Lista sparowanych urządzeń</string>
+    <string name="permission_denied">Uprawnienie potrzebne do działania aplikacji nie zostało przyznane</string>
+    <string name="discovery_failure">Nie udało się rozpocząć wykrywania urządzeń</string>
 </resources>
